fix padding overlap in iphone

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -99,7 +99,7 @@ small, li {
     border-radius: 6px;
     font-family: var(--body);
     font-weight: 600;
-    font-size: 1.1rem;
+    font-size: 1rem; /* .85rem */
     padding: 0.5em;  /* 0.5em 0.6em 0.2em */
 }
 
